--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.22.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
