--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "net": "^1.0.2",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.8.0",
