--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
+    "install": "^0.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "net": "^1.0.2",
@@ -16,6 +17,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.3.2"
   }
 }
