--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -17,6 +21,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.51.2",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.0",
